* 2016.09.18 - added many new Android descriptions (past and new such as Android 7.0.0)
             - added 'add', 'browse' and 'show' functions to 'device'

* 2016.09.10 - added 'device' module to unify description of available user devices for crowd-benchmarking/crowd-tuning

* 2016.09.09 - updated DVDT OpenCL profiler soft description

* 2016.09.07 - added --env and --env. keys to ck install package to be able to preset env variables

* 2016.09.05 - added HDF5 library description
             - changed soft functions 'detect' to 'internal_detect' and 'check' to 'detect'

* 2016.09.01 - fixed recursive search of directories in Python 2.x with non-ascii directories
 
* 2016.08.30 - added -fPIE to LLVM soft desc for Android based on ARM64

* 2016.08.11 - fixed detection of environment if already installed when customized version've changed
             - added record_script flag to quickly rebuild packages without CK

* 2016.08.08 - added flag "extra_path" to package install
             - added detection of GIT info (revision + date time of last commit) with possibility to add to version
               (to differentiate the same packages with different GIT revisions)

* 2016.08.03 - fixing static library compilation on MacOS using CLANG (such as OpenME)

* 2016.08.02 - fixed various problems with crowdtuning on MacOS

* 2016.07.29 - added possibility to skip compiler name from suggested path during installation (no_compiler_in_suggested_path)

* 2016.07.24 - added detection of version change (for tools) when setting environments in deps
             - added dependency on GCC in NVCC (Linux)

* 2016.07.12 - added 'extra_suggested_path' to customization of packages

* 2016.07.07 - added 'no_os_in_suggested_path' to customization of packages to avoid
               adding OS info at the end of the suggested path. Useful when installing 
               various OS-independent datasets;
               added 'no_ver_in_suggested_path';