@@ -1,5 +1,6 @@
 * 2016.09.18 - added many new Android descriptions (past and new such as Android 7.0.0)
              - added 'add', 'browse' and 'show' functions to 'device'
+             - improving new CPU format detection (Linux/Android/MacOS)
 
 * 2016.09.10 - added 'device' module to unify description of available user devices for crowd-benchmarking/crowd-tuning
 
